@@ -1,4 +1,8 @@
-// Automatically generated by Opus v0.40
-namespace DependencyChecker
+// <copyright file="DependencyGenerator.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>DependencyGenerator package</summary>
+// <author>Mark Final</author>
+namespace DependencyGenerator
 {
 }
