@@ -1,12 +1,29 @@
-// Automatically generated by Opus v0.40
-namespace DependencyChecker
+// <copyright file="IncludeDependencyGeneration.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>DependencyGenerator package</summary>
+// <author>Mark Final</author>
+namespace DependencyGenerator
 {
     public class IncludeDependencyGeneration
     {
         private static System.Threading.Thread dependencyThread = null;
         private static System.Threading.ManualResetEvent completedEvent = new System.Threading.ManualResetEvent(false);
 
-        internal static DependencyQueue FileProcessQueue
+        public class Data
+        {
+            public string sourcePath = null;
+            public string depFilePath = null;
+            public Opus.Core.StringArray includePaths = null;
+        }
+
+        public enum Style
+        {
+            Opus,
+            Makefile
+        }
+
+        internal static DependencyQueue<Data> FileProcessQueue
         {
             get;
             private set;
@@ -14,62 +31,11 @@ namespace DependencyChecker
 
         static IncludeDependencyGeneration()
         {
-            FileProcessQueue = new DependencyQueue();
+            FileProcessQueue = new DependencyQueue<Data>();
 
             System.Threading.ParameterizedThreadStart threadStart = new System.Threading.ParameterizedThreadStart(ProcessFileQueue);
             dependencyThread = new System.Threading.Thread(threadStart);
             dependencyThread.Start(FileProcessQueue);
-        }
-
-        internal class DependencyQueue
-        {
-            public class Data
-            {
-                public string sourcePath = null;
-                public string depFilePath = null;
-                public Opus.Core.StringArray includePaths = null;
-            }
-
-            public enum Style
-            {
-                Opus,
-                Makefile
-            }
-
-            private System.Collections.Generic.Queue<Data> data = new System.Collections.Generic.Queue<Data>();
-            private System.Threading.ManualResetEvent alive = new System.Threading.ManualResetEvent(false);
-
-            public System.Threading.ManualResetEvent IsAlive
-            {
-                get
-                {
-                    return this.alive;
-                }
-            }
-
-            public void Enqueue(Data value)
-            {
-                lock (this.data)
-                {
-                    this.data.Enqueue(value);
-                    this.alive.Set();
-                }
-            }
-
-            public Data Dequeue()
-            {
-                Data result = null;
-                lock (this.data)
-                {
-                    if (1 == this.data.Count)
-                    {
-                        this.alive.Reset();
-                    }
-
-                    result = this.data.Dequeue();
-                }
-                return result;
-            }
         }
 
         public static string HeaderDependencyPathName(string sourceFile, string outputDirectory)
@@ -78,7 +44,7 @@ namespace DependencyChecker
             return depPathName;
         }
 
-        private static void GenerateDepFile(DependencyQueue.Data entry, DependencyQueue.Style style)
+        private static void GenerateDepFile(Data entry, Style style)
         {
             System.Collections.Generic.Queue<string> filesToSearch = new System.Collections.Generic.Queue<string>();
             filesToSearch.Enqueue(entry.sourcePath);
@@ -89,6 +55,10 @@ namespace DependencyChecker
             while (filesToSearch.Count > 0)
             {
                 string fileToSearch = filesToSearch.Dequeue();
+#if OPUS_ENABLE_FILE_HASHING
+                FileHashGeneration.FileProcessQueue.Enqueue(fileToSearch);
+#endif
+
                 string fileContents = null;
                 using (System.IO.TextReader reader = new System.IO.StreamReader(fileToSearch))
                 {
@@ -147,7 +117,7 @@ namespace DependencyChecker
             {
                 using (System.IO.TextWriter depWriter = new System.IO.StreamWriter(entry.depFilePath))
                 {
-                    if (DependencyQueue.Style.Opus == style)
+                    if (Style.Opus == style)
                     {
                         foreach (string headerPath in headerPathsFound)
                         {
@@ -173,7 +143,7 @@ namespace DependencyChecker
             Opus.Core.BuildManager buildManager = Opus.Core.State.BuildManager;
             buildManager.AdditionalThreadCompletionEvents.Add(completedEvent);
 
-            DependencyQueue data = obj as DependencyQueue;
+            DependencyQueue<Data> data = obj as DependencyQueue<Data>;
             for (; ; )
             {
                 // wake up when there is data to be processed
@@ -187,8 +157,8 @@ namespace DependencyChecker
                 // do work while it's available
                 do
                 {
-                    DependencyQueue.Data entry = data.Dequeue();
-                    GenerateDepFile(entry, DependencyQueue.Style.Opus);
+                    Data entry = data.Dequeue();
+                    GenerateDepFile(entry, Style.Opus);
                 }
                 while (System.Threading.WaitHandle.WaitAll(new System.Threading.WaitHandle[] { data.IsAlive }, 0));
             }
