@@ -1,3 +1,5 @@
+31-Mar-2012 Added source file hashing dependency generation. .c/.cpp/.h source files are hashed in a separate thread and cached. If timestamp checks fail, hashes are compared. If hashes are identical, no build occurs. This feature is disabled by default, and enabled by adding the define OPUS_ENABLE_FILE_HASHING to a package.
+
 31-Mar-2012 Capture Ctrl+C and allow the build to gracefully fail.
 
 29-Mar-2012 Linux/OSX Opus shell script will now call mono with --debug when -debugsymbols is passed as an argument. Running mono with --debug gives additional useful information in stack traces.
